--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,3 +1,5 @@
 FROM php:7.4.14-apache
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 RUN a2enmod userdir
+RUN a2enmod rewrite
+ADD userdir.conf /etc/apache2/mods-enabled/
