Update README, fix path traversal issue & change default port & password

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
 # SQL
-MYSQL_ROOT_PASSWORD=secret
+MYSQL_ROOT_PASSWORD=MARIADB|secret
 
 # FTP
 BANNER="Basic FTP − NOT FOR PRODUCTION"
 MAX_CONNS=100
 MAX_CONNS_PER_IP=5
+PASSWORD_PREFIX=RPI|
+PASSWORD_SUFFIX=|LAMP
