Mount a folder instead of file avoid break when editing with VIM

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       context: ftp/
     volumes:
       - "./html/users/:/ftp/"
-      - "./ftp/users.json:/users.json"
+      - "./ftp/users/:/ftp_users/"
     restart: unless-stopped
     network_mode: "host"
     env_file:
