--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,8 @@
 # SQL
-MYSQL_ROOT_PASSWORD=MARIADB|secret
+MYSQL_ROOT_PASSWORD="MARIADB|secret"
+PUID=1000
+PGID=1000
+TZ=Europe/Paris
 
 # FTP
 BANNER="Basic FTP − NOT FOR PRODUCTION"
